--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -7,8 +7,38 @@
 </ion-header>
 
 <ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+
+  <ion-list>
+
+    <ion-item>
+      <ion-label>Crude Oil</ion-label>
+      <ion-input type="number" [(ngModel)]="field1" ></ion-input>
+    </ion-item>
+  
+    <ion-item>
+      <ion-label>Heating Oil</ion-label>
+      <ion-input type="number" [(ngModel)]="field2"></ion-input>
+    </ion-item>
+
+    <ion-item>
+      <ion-label>RBOB Regular</ion-label>
+      <ion-input type="number" [(ngModel)]="field3"></ion-input>
+    </ion-item>
+
+    <ion-item>
+      <ion-label>Supply</ion-label>
+      <ion-input type="number" [(ngModel)]="field4"></ion-input>
+    </ion-item>
+
+    <ion-item>
+      <ion-label>Demand</ion-label>
+      <ion-input type="number" [(ngModel)]="field5"></ion-input>
+    </ion-item>
+  
+  </ion-list>
+  
+  <div padding>
+    <button block ion-button (click)="requestData()">Find Result</button>
+  </div>
+
 </ion-content>
